# FelfelDM

./: .gitignore  FelfelDM.spec  README.md  apply-all-fixes.sh  build_and_install.sh  install.sh  main.py  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements.txt  uninstall.sh
FelfelDM-extension/: background.js  content.js  install.sh  manifest-firefox.json  manifest.json  popup.html  popup.js
FelfelDM.git/: .SRCINFO  PKGBUILD  felfeldm.install
core/: __init__.py  aria2_handler.py  aria2_manager.py  aria2_rpc.py  aria2_rpc_async.py  aria2_rpc_base.py  async_worker.py  constants.py  data_store.py  download_updater.py  enums.py  error_handler.py  file_size_fetcher.py  history.py  init.py  local_server.py  monitor.py  proxy_manager.py  queue_model.py  queue_worker.py  service_container.py  session_manager.py  ssl_utils.py  temp_db.py  updater.py  websocket_client.py  worker.py  youtube_downloader.py  youtube_worker.py
tests/: test_aria2_manager.py  test_aria2_rpc.py  test_data_store.py  test_helpers.py  test_local_server.py  test_main_window.py  test_updater.py  test_websocket_client.py
ui/: __init__.py  animated_dialog.py  controllers.py  delegates.py  dialogs.py  download_proxy_dialog.py  history_dialog.py  icons.py  main_window.py  proxy_dialog.py  speed_chart.py  splash.py  table_model.py  update_dialog.py  youtube_progress.py
utils/: __init__.py  helpers.py  style.py
